--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -1,9 +1,10 @@
+
 .dashboard .top-bar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%; 
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  width: 100%; 
+}
   
   .dashboard .label-1 {
     margin-bottom: 8px; 
@@ -17,20 +18,30 @@
   font-weight: lighter;
   }
 
-  
-  
-   .input-field input {
+
+
+  .input-field {
+    display: flex;
+    justify-content: center; /* Center the input field */
+    margin-top: 20px;
+  }
+
+
+  .input-field input {
     width: 100%; 
     max-width: 400px; 
-    margin-right: 40px;
-    margin-top: 20px;
     padding: 15px;
     border: none;
     border-radius: 50px;
     box-shadow: 1px 2px 2px 0px rgb(98, 94, 94);
     text-align: center;
-  }
+}
+   
+  
   .dashboard{
     text-align: center;
   }
-   
+
+
+
+
